--- a/projects/viewer/src/modules/post/pages/post-list/community/post-community.component.html
+++ b/projects/viewer/src/modules/post/pages/post-list/community/post-community.component.html
@@ -20,8 +20,8 @@
             <tr>
               <th> Title </th>
               <th width="140"> Author </th>
-              <th width="130"> <i class="fa fa-eye font-weight-light"></i> </th>
-              <th width="130"> <i class="fa fa-thumbs-up font-weight-light"></i> </th>
+              <th width="130"> Views </th>
+              <th width="130"> Likes </th>
             </tr>
             </thead>
             <tbody>
