--- a/projects/viewer/src/modules/post/pages/post-list/sheet/post-sheet.component.html
+++ b/projects/viewer/src/modules/post/pages/post-list/sheet/post-sheet.component.html
@@ -15,7 +15,7 @@
           <router-outlet></router-outlet>
         </div>
 
-        <div class="bg-white border">
+        <div class="bg-white border-right">
           <table class="table">
             <thead>
             <tr>
