--- a/projects/viewer/src/modules/post/pages/post-item-detail/community/post-community-item-detail.component.html
+++ b/projects/viewer/src/modules/post/pages/post-item-detail/community/post-community-item-detail.component.html
@@ -15,5 +15,5 @@
     </div>
   </div>
 
-  <app-post-comment boardType="free"></app-post-comment>
+  <app-post-comment boardType="community"></app-post-comment>
 </div>
