--- a/projects/viewer/src/modules/post/pages/post-item-detail/sheet/post-sheet-item-detail.component.html
+++ b/projects/viewer/src/modules/post/pages/post-item-detail/sheet/post-sheet-item-detail.component.html
@@ -17,7 +17,7 @@
     <div class="col-4">
       <div class="attached">
         <h4> Contract Address </h4>
-        <p> {{post.contractAddress}} </p>
+        <p> {{post.contract_address}} </p>
 
         <h4> Price </h4>
         <p> {{post.price | number}} MZK </p>
