ci: contract:compile command include import process

--- a/projects/viewer/src/app/pages/ipfs-test/ipfs-test.component.html
+++ b/projects/viewer/src/app/pages/ipfs-test/ipfs-test.component.html
@@ -7,7 +7,7 @@
 
       <label class="btn btn-primary mb-0">
         <input type="file" class="d-none" id="ipfsFile" name="ipfsFile" (change)="changeFile($event)">
-        Select File
+        Select File {{ipfsFile?.name}}
       </label>
 
       <div class="mt-4">
