chore: typo refactor & alertify z-index upto 3

--- a/projects/viewer/src/modules/post/pages/post-write/sheet/post-sheet-write.component.html
+++ b/projects/viewer/src/modules/post/pages/post-write/sheet/post-sheet-write.component.html
@@ -10,7 +10,7 @@
                    ngFileSelect [uploadInput]="uploadInput" (uploadOutput)="onUploadOutput($event)"
                    [disabled]="uploadStatus?.status === 'uploading'">
             <span class="btn-text">
-              Select Music File
+              Music File (PDF or MP3)
             </span>
           </label>
 
