--- a/projects/viewer/src/app/components/navbar/navbar.component.html
+++ b/projects/viewer/src/app/components/navbar/navbar.component.html
@@ -6,14 +6,14 @@
 
     <div class="navbar-collapse">
       <ul class="row main-menu flex-grow-1">
-        <li routerLink="/board/video" routerLinkActive="active">
-          <i class="fab fa-youtube"></i>
-          Video
-        </li>
-        <li routerLink="/board/community" routerLinkActive="active">
-          <i class="fa fa-users"></i>
-          Community
-        </li>
+        <!--<li routerLink="/board/video" routerLinkActive="active">-->
+          <!--<i class="fab fa-youtube"></i>-->
+          <!--Video-->
+        <!--</li>-->
+        <!--<li routerLink="/board/community" routerLinkActive="active">-->
+          <!--<i class="fa fa-users"></i>-->
+          <!--Community-->
+        <!--</li>-->
         <li routerLink="/board/sheet" routerLinkActive="active">
           <i class="fa fa-music"></i>
           Music
