--- a/projects/viewer/src/modules/post/pages/post-list/post-list.scss
+++ b/projects/viewer/src/modules/post/pages/post-list/post-list.scss
@@ -8,7 +8,7 @@
   padding: 20px;
 
   .tags-all {
-    font-size: 1.4rem;
+    font-size: 18px;
   }
 
   ul.tags {
@@ -19,7 +19,7 @@
       padding: 4px 4px 4px 0;
 
       a {
-        font-size: 1.2rem;
+        font-size: 16px;
         cursor: pointer;
         transition: color 0.2s ease-in-out;
 
