refactor(wallet): fix multiple request to sign message/transaction issue and refactor event with uuid

--- a/projects/viewer/src/modules/wallet/pages/sign-personal-message/sign-personal-message.component.html
+++ b/projects/viewer/src/modules/wallet/pages/sign-personal-message/sign-personal-message.component.html
@@ -6,7 +6,7 @@
   <h4> Message </h4>
 
   <div>
-    <textarea rows="8" readonly>{{currentMsg.data}}</textarea>
+    <textarea rows="8" readonly>{{parsedCurrentMsg}}</textarea>
   </div>
 
   <button class="btn btn-primary float-right" (click)="sign()"> Sign </button>
