--- a/projects/viewer/src/app/components/muzika-apps/muzika-apps.component.html
+++ b/projects/viewer/src/app/components/muzika-apps/muzika-apps.component.html
@@ -6,7 +6,7 @@
   <li [class.active]="currentTab === 'wallet'" (click)="changeTab('wallet')">
     <i class="fas fa-desktop-alt" style="display: block;font-size: 40px;"></i>
     Wallet
-    <span class="unread"> 3 </span>
+    <!--<span class="unread"> 3 </span>-->
   </li>
   <li [class.active]="currentTab === 'ipfs-test'" (click)="changeTab('ipfs-test')">
     <i class="fas fa-archive" style="display: block;font-size: 40px;"></i>
