fix(viewer/wallet): add IPCUtil to wrap events and remove close btn on floating-wallet (instead use reject button)

--- a/projects/viewer/src/app/app.component.html
+++ b/projects/viewer/src/app/app.component.html
@@ -10,7 +10,7 @@
   </div>
   <div class="backdrop"></div>
   <div class="wallet-content">
-    <span class="floating-close" (click)="closeFloating()"> <i class="fa fa-times"></i> </span>
+    <!--<span class="floating-close" (click)="closeFloating()"> <i class="fa fa-times"></i> </span>-->
     <router-outlet name="wallet"></router-outlet>
   </div>
   <div class="ipfs-content">
