--- a/projects/viewer/src/modules/wallet/pages/sign-personal-message/sign-personal-message.component.html
+++ b/projects/viewer/src/modules/wallet/pages/sign-personal-message/sign-personal-message.component.html
@@ -9,7 +9,10 @@
     <textarea rows="8" readonly>{{parsedCurrentMsg}}</textarea>
   </div>
 
-  <button class="btn btn-primary float-right" (click)="sign()"> Sign </button>
+  <div class="btn btn-group float-right p-0">
+    <button class="btn btn-primary" (click)="sign()"> Sign </button>
+    <button class="btn btn-danger" (click)="reject()"> Reject </button>
+  </div>
 </div>
 
 <div *ngIf="!currentMsg" class="no-messages">
