--- a/projects/viewer/src/modules/wallet/pages/sign-transaction/sign-transaction.component.html
+++ b/projects/viewer/src/modules/wallet/pages/sign-transaction/sign-transaction.component.html
@@ -35,7 +35,11 @@
     </div>
   </div>
 
-  <button class="btn btn-primary float-right" (click)="sign()"> Sign </button>
+
+  <div class="btn btn-group float-right p-0">
+    <button class="btn btn-primary" (click)="sign()"> Sign </button>
+    <button class="btn btn-danger" (click)="reject()"> Reject </button>
+  </div>
 </div>
 
 <div *ngIf="!currentTx" class="no-messages">
