feat(web): create abstract main page

--- a/projects/web/src/pages/main/main.component.html
+++ b/projects/web/src/pages/main/main.component.html
@@ -1,1 +1,94 @@
-Main Page
+<main>
+  <div class="main-img">
+    <div class="backdrop"></div>
+
+    <div class="motto">
+      <h2> Anyone Can be an Artist </h2>
+    </div>
+
+    <section class="our-service">
+      <div class="row icon">
+        <div class="col">
+          <img src="../../assets/icon-01.png">
+          <div> Open </div>
+        </div>
+        <div class="col">
+          <img src="../../assets/icon-02.png">
+          <div> Copyright </div>
+        </div>
+        <div class="col">
+          <img src="../../assets/icon-03.png">
+          <div> Payment </div>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="row description">
+        <div class="col">
+          Everyone can upload, share <br>
+          and sell their own music sheets, <br>
+          whether they have just one sheet <br>
+          or a thousand <br>
+        </div>
+        <div class="col">
+          We protect and provide <br>
+          official proof of evidence <br>
+          for copyright of all music sheets <br>
+        </div>
+        <div class="col">
+          Artists gets access to their <br>
+          royalty account page, <br>
+          where they can check <br>
+          their monthly payment <br>
+        </div>
+      </div>
+    </section>
+  </div>
+</main>
+
+<section class="back-white top-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+        <div class="tabs">
+          <span class="tab active">
+            TOP MUSIC SHEETS
+          </span>
+          <span class="tab">
+            NEW MUSIC SHEETS
+          </span>
+        </div>
+
+        <table class="top-sheet">
+          <!-- @TODO Design and scatter items on it -->
+          <tr *ngFor="let sheet of [1, 2, 3, 4, 5]; let i = index">
+            <td> {{i + 1}} </td>
+            <td> 장난감숲 </td>
+            <td> JayM </td>
+            <td> piano </td>
+          </tr>
+        </table>
+      </div>
+      <div class="col-6">
+        <div class="subject"> ARTISTS WITH US </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="back-blue">
+  <h4> Hot Videos </h4>
+
+  <div class="container">
+    <!-- @TODO Add video component -->
+  </div>
+</section>
+
+<section class="back-white">
+  <h4> Popular Artists </h4>
+
+  <div class="container">
+    <!-- @TODO Add artists component -->
+  </div>
+</section>
