--- a/projects/web/src/pages/main/main.component.scss
+++ b/projects/web/src/pages/main/main.component.scss
@@ -1,18 +1,174 @@
-.sheets, .posts {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
+.main-img {
+  background: url(../../assets/main.jpg);
+  background-position-y: 50%;
+  background-size: cover;
+  height: 600px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
 
-.bg-primary {
-  button[mat-button] {
-    border-radius: 0;
-    /deep/ .mat-ripple-element {
-      background-color: rgba(255, 255, 255, 0.1);
+  .backdrop {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+  }
+
+  .motto {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    h2 {
+      position: relative;
+      text-align: center;
+      color: #fff;
+      text-transform: uppercase;
+      z-index: 2;
+      word-spacing: 4px;
+    }
+  }
+
+  .our-service {
+    background: rgba(0, 0, 0, 0.5);
+    height: 320px;
+    color: #fff;
+    z-index: 2;
+
+    .row {
+      margin: 0 auto;
+      width: 860px;
+
+      .col {
+        text-align: center;
+      }
+
+      &.icon {
+        text-align: center;
+
+        img {
+          width: 140px;
+          max-width: 100%;
+        }
+
+        div {
+          font-weight: bold;
+          font-size: 1rem;
+          text-transform: uppercase;
+        }
+      }
+
+      &.description {
+        .col {
+          font-size: 0.8rem;
+
+          &:before {
+            content: ' ';
+            width: 0;
+            height: 0;
+            border-left: 10px solid transparent;
+            border-right: 10px solid transparent;
+            border-top: 10px solid #fff;
+            display: block;
+            margin: 0 auto 15px auto;
+          }
+        }
+      }
     }
 
-    /deep/ .mat-button-focus-overlay {
-      background-color: rgba(255, 255, 255, 0.12);
+    hr {
+      background: #fff;
+      margin-bottom: 0;
+    }
+  }
+}
+
+section:not(.our-service) {
+  padding: 60px 0 50px;
+
+  &.back-white {
+    background-color: #fafbfc;
+  }
+
+  &.back-blue {
+    background-color: #edeff2;
+  }
+
+  >h4 {
+    font-size: 1.25rem;
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+
+    &:after {
+      display: table;
+      content: ' ';
+      width: 70px;
+      height: 2px;
+      background-color: #000;
+      margin: 35px auto;
+    }
+  }
+
+  &:last-child {
+    padding-bottom: 110px;
+  }
+
+  .tabs {
+    .tab {
+      display: inline-block;
+      width: 50%;
+      font-size: 1.25rem;
+      font-weight: bold;
+      color: #d4d4d4;
+      text-align: center;
+      border-bottom: 2px solid #d4d4d4;
+      line-height: 3;
+
+      &.active {
+        color: #333030;
+        border-color: #333030;
+      }
+    }
+  }
+
+  &.top-section {
+
+    .subject {
+      font-size: 1.25rem;
+      font-weight: bold;
+      color: #333030;
+      text-align: center;
+      border-bottom: 2px solid #333030;
+      line-height: 3;
+    }
+
+    .row {
+      margin-left: -20px;
+      margin-right: -20px;
+
+      .col {
+        &, &-6 {
+          padding-left: 20px;
+          padding-right: 20px;
+        }
+      }
+    }
+
+    table.top-sheet {
+      width: 100%;
+
+      tr {
+        td {
+          height: 55px;
+          padding: 8px;
+          border-bottom: 1px solid #d4d4d4;
+        }
+      }
     }
   }
 }
