--- a/projects/web/src/styles.scss
+++ b/projects/web/src/styles.scss
@@ -63,6 +63,7 @@ button:focus {
 }
 
 /* Scrollbar design */
+/*
 ::-webkit-scrollbar {
   width: 6px;
 
@@ -84,6 +85,7 @@ button:focus {
   background: #ddd;
   border-radius: 20px;
 }
+*/
 
 .alertify {
   z-index: 3;
