--- a/projects/web/src/components/layout/layout-intro.component.scss
+++ b/projects/web/src/components/layout/layout-intro.component.scss
@@ -4,16 +4,13 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
   background-color: $background-color;
 }
 
 .main-content {
   height: 100%;
   flex-grow: 1;
-  overflow-y: auto;
-  overflow-x: hidden;
 }
 
 .backdrop {
