--- a/projects/viewer/src/modules/post/pages/post-write/sheet/post-sheet-write.component.scss
+++ b/projects/viewer/src/modules/post/pages/post-write/sheet/post-sheet-write.component.scss
@@ -40,11 +40,13 @@
         }
       }
     }
+  }
 
-    .file-name {
-      position: absolute;
-      bottom: 8px;
-    }
+  .file-name {
+    position: relative;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
   }
 
   .upload-progress {
