refactor(web): move layout to shared module

--- a/projects/web/src/components/intro-navbar/intro-navbar.component.html
+++ b/projects/web/src/components/intro-navbar/intro-navbar.component.html
@@ -16,7 +16,7 @@
           Road Map
         </li>
         <li routerLink="/beta" routerLinkActive="active">
-          Beta
+          Beta Service
         </li>
       </ul>
     </div>
