--- a/projects/web/src/modules/shared/components/navbar/navbar.component.html
+++ b/projects/web/src/modules/shared/components/navbar/navbar.component.html
@@ -1,3 +1,6 @@
+<div class="p-3 bg-dark">
+  <a routerLink="/" style="color: #fff"> <i class="fa fa-chevron-left" style="margin-right: 6px;"></i> Back to the Muzika </a>
+</div>
 <nav class="navbar navbar-expand">
   <div class="container-fluid">
     <div class="navbar-menu">
