--- a/projects/web/src/modules/shared/components/navbar/navbar.component.scss
+++ b/projects/web/src/modules/shared/components/navbar/navbar.component.scss
@@ -1,14 +1,13 @@
-@import '../../theme/variables';
+@import '../../../../theme/variables';
 
 :host {
   background-color: $navbar-background;
   display: block;
   position: relative;
-  height: 87px;
 }
 
 .navbar {
-  height: 100%;
+  height: 87px;
 }
 
 .container-fluid {
