feat(post-detail): create post module and post-item-detail page

--- a/projects/web/src/theme/_variables.scss
+++ b/projects/web/src/theme/_variables.scss
@@ -7,7 +7,7 @@
 /**
  * Main colors
  */
-$background-color: #f0f0f0;
+$background-color: #fafbfc;
 
 $primary-palette: $mat-blue-grey;
 $secondary-palette: (
