feat(cmd): shortcut support & navbar refactor

--- a/projects/web/src/modules/shared/components/navbar/navbar.component.html
+++ b/projects/web/src/modules/shared/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <div class="navbar-menu">
       <!-- Sub-menu -->
       <div class="submenu-group">
-        <div class="subject"> Instrumental Music </div>
+        <div class="subject"> Instrumental Sheet Music</div>
 
         <ul class="menu">
           <li routerLink="/board/sheet" routerLinkActive="active">
