--- a/projects/web/src/modules/shared/components/navbar/navbar.component.scss
+++ b/projects/web/src/modules/shared/components/navbar/navbar.component.scss
@@ -61,8 +61,8 @@
     }
 
     .subject {
-      color: #fff;
-      font-size: 0.8rem;
+      color: #dfdfdf;
+      font-size: 13px;
       // margin-left: -20px;
     }
 
