fix(music-post): rename sheet post to music post

--- a/projects/viewer/src/components/navbar/navbar.component.html
+++ b/projects/viewer/src/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
           <!--<i class="fa fa-users"></i>-->
           <!--Community-->
         <!--</li>-->
-        <li routerLink="/board/sheet" routerLinkActive="active">
+        <li routerLink="/board/music" routerLinkActive="active">
           <i class="fa fa-music"></i>
           Music
         </li>
@@ -72,8 +72,8 @@
         <i class="fa fa-users"></i>
         커뮤니티
       </li>
-      <li class="col" routerLink="/board/sheet" routerLinkActive="active">
-        <i class="fa fa-sheet"></i>
+      <li class="col" routerLink="/board/music" routerLinkActive="active">
+        <i class="fa fa-music"></i>
         악보
       </li>
       <li class="col">
