--- a/projects/web/src/components/intro-navbar/intro-navbar.component.html
+++ b/projects/web/src/components/intro-navbar/intro-navbar.component.html
@@ -6,13 +6,13 @@
 
     <div class="navbar-menu">
       <ul class="main-menu">
-        <li routerLink="/board/sheet" routerLinkActive="active">
+        <li routerLink="/board/music" routerLinkActive="active">
           About
         </li>
-        <li routerLink="/board/sheet" routerLinkActive="active">
+        <li routerLink="/board/music" routerLinkActive="active">
           Team &amp; Advisers
         </li>
-        <li routerLink="/board/sheet" routerLinkActive="active">
+        <li routerLink="/board/music" routerLinkActive="active">
           Road Map
         </li>
         <li routerLink="/beta" routerLinkActive="active">
