--- a/projects/web/src/modules/shared/components/navbar/navbar.component.html
+++ b/projects/web/src/modules/shared/components/navbar/navbar.component.html
@@ -9,13 +9,13 @@
         <div class="subject"> Instrumental Sheet Music</div>
 
         <ul class="menu">
-          <li routerLink="/board/sheet" routerLinkActive="active">
+          <li routerLink="/board/music" routerLinkActive="active">
             PIANO
           </li>
-          <li routerLink="/board/sheet" routerLinkActive="active">
+          <li routerLink="/board/music" routerLinkActive="active">
             GUITAR
           </li>
-          <li routerLink="/board/sheet" routerLinkActive="active">
+          <li routerLink="/board/music" routerLinkActive="active">
             ETC <i class="fa fa-caret-down"></i>
           </li>
         </ul>
@@ -26,13 +26,13 @@
         <div class="subject"> Listening Music </div>
 
         <ul class="menu">
-          <li routerLink="/board/sheet" routerLinkActive="active">
+          <li routerLink="/board/music" routerLinkActive="active">
             EDM
           </li>
-          <li routerLink="/board/sheet" routerLinkActive="active">
+          <li routerLink="/board/music" routerLinkActive="active">
             POP
           </li>
-          <li routerLink="/board/sheet" routerLinkActive="active">
+          <li routerLink="/board/music" routerLinkActive="active">
             ETC <i class="fa fa-caret-down"></i>
           </li>
         </ul>
@@ -87,8 +87,8 @@
         <i class="fa fa-users"></i>
         커뮤니티
       </li>
-      <li class="col" routerLink="/board/sheet" routerLinkActive="active">
-        <i class="fa fa-sheet"></i>
+      <li class="col" routerLink="/board/music" routerLinkActive="active">
+        <i class="fa fa-music"></i>
         악보
       </li>
       <li class="col">
