refactor(intro): separate intro pages, component with service modules

--- a/projects/web/src/modules/shared/components/navbar/navbar.component.html
+++ b/projects/web/src/modules/shared/components/navbar/navbar.component.html
@@ -67,7 +67,7 @@
 
       <ng-template #loggedInBlock>
         <div class="ml-auto pr-4">
-          <a class="btn-login" routerLink="/login">
+          <a class="btn-login" routerLink="/beta/login">
             Login
           </a>
         </div>
