refactor(footer): prototyping footer design with few links

--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.scss
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.scss
@@ -21,7 +21,7 @@
   color: #fff;
 
   brand-icon-muzika {
-    display: inline;
+    display: inline-block;
     height: $navbar-brand-size;
 
     /deep/ .muzika-icon-striped-primary {
