feat(intro): support main page with particles intro

--- a/projects/viewer/src/theme/_variables.scss
+++ b/projects/viewer/src/theme/_variables.scss
@@ -43,7 +43,7 @@ $secondary-palette: (
   )
 );
 
-$primary-color: rgb(47, 64, 80);
+$primary-color: #212529;
 $secondary-color: map-get($secondary-palette, 500);
 
 $color-black: #33333D;
