--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -1,1 +1,53 @@
-Introduction Main Page
+<!-- Home start -->
+<section class="section bg-home-full bg-home" id="home">
+
+  <div class="home-center">
+    <div class="home-desc-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="text-black">
+              <h1 class="home-title mx-auto mt-4">Muzika</h1>
+              <p class="home-subtitle mx-auto pt-2 pr-5">
+                A blockchain-based self-sustaining ecosystem that will revolutionize the digital music industry.
+              </p>
+              <div>
+                <a href="#" class="btn btn-custom btn-round">Whitepaper (ENG)</a>
+                <a href="#" class="btn btn-custom btn-round ml-3">Project Teaser (ENG)</a>
+                <a href="#" class="btn btn-custom btn-round m-3">Project Teaser (KOR)</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="video-play-bar">
+              <a href="https://vimeo.com/109054393" class="video-play-icon">
+                <i class="play-video-btn fas fa-play play-position"></i>
+              </a>
+              <img src="images/more-features.jpg" alt="" class="img-fluid mx-auto d-block">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+</section>
+<!-- home end -->
+
+
+
+<!-- Cta  Start-->
+<section class="section bg-cta">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-9 critarea-desc mt-3 mb-3">
+        <h5>Sync with Muzika, the redemption of the music world.</h5>
+      </div>
+      <div class="col-lg-3 mt-4 mb-3 text-right">
+        <a href="#" class="btn btn-outline-custom">Get Started</a>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Cta end  -->
