--- a/projects/web/src/modules/shared/components/navbar/navbar.component.html
+++ b/projects/web/src/modules/shared/components/navbar/navbar.component.html
@@ -39,7 +39,7 @@
       </div>
     </div>
 
-    <div class="navbar-brand" routerLink="/">
+    <div class="navbar-brand" routerLink="/beta">
       <brand-icon-muzika></brand-icon-muzika>
     </div>
 
