--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
@@ -1,24 +1,38 @@
-<nav class="navbar navbar-expand">
-  <div class="container-fluid">
-    <div class="navbar-brand" routerLink="/">
+<nav class="navbar navbar-expand-lg fixed-top navbar-custom navbar-light sticky">
+  <div class="container">
+    <a class="navbar-brand" routerLink="/">
       <brand-icon-muzika></brand-icon-muzika>
-    </div>
+      <span>Muzika</span>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="fal fa-bars"></span>
+    </button>
 
-    <div class="navbar-menu">
-      <ul class="main-menu">
-        <li routerLink="/board/music" routerLinkActive="active">
-          About
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#home">White Paper</a>
         </li>
-        <li routerLink="/board/music" routerLinkActive="active">
-          Team &amp; Advisers
+        <li class="nav-item">
+          <a class="nav-link" href="#features">Advisors</a>
         </li>
-        <li routerLink="/board/music" routerLinkActive="active">
-          Road Map
+        <li class="nav-item">
+          <a class="nav-link" href="#services">Team</a>
         </li>
-        <li routerLink="/beta" routerLinkActive="active">
-          Beta Service
+
+        <li class="nav-item">
+          <a class="nav-link" href="#team">Roadmap</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#pricing">Services</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#faq">FAQ</a>
         </li>
       </ul>
+
     </div>
   </div>
 </nav>
