--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.scss
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.scss
@@ -1,18 +1,30 @@
-.sheets, .posts {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+
+.bg-home-full {
+  height: 480px;
 }
 
-.bg-primary {
-  button[mat-button] {
-    border-radius: 0;
-    /deep/ .mat-ripple-element {
-      background-color: rgba(255, 255, 255, 0.1);
-    }
+.bg-home {
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+  padding: 120px 0;
+}
 
-    /deep/ .mat-button-focus-overlay {
-      background-color: rgba(255, 255, 255, 0.12);
-    }
-  }
+.home-title {
+  font-size: 3.1rem;
+}
+
+.home-subtitle {
+  color: #727070;
+}
+
+/deep/ canvas {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.btn {
+  padding: 8px 16px;
+  font-size: 12px;
 }
