--- a/projects/web/src/pages/login/login.component.html
+++ b/projects/web/src/pages/login/login.component.html
@@ -1,68 +1,8 @@
-<!--
-<div class="jumbotron">
-  <h2>
-    Welcome to Muzika
-  </h2> <BR />
-  <div class="row">
-    <div class="col-sm-4">
-      <h4>
-        How would you like to access your wallet?
-      </h4>
-      <div class="form-group">
-        <BR/>
-        <mat-radio-group class="example-radio-group" [(ngModel)]="currentWalletProvider">
-          <mat-radio-button [value]="'addressOnly'">
-            View w/ Address Only
-          </mat-radio-button>
-          <BR/>
-          <mat-radio-button [value]="'metamask'">
-            Metamask / Mist
-          </mat-radio-button>
-          <BR/>
-          <mat-radio-button [value]="'ledger'">
-            Ledger Wallet
-          </mat-radio-button>
-          <BR/>
-          <mat-radio-button [value]="'keystore'">
-            Keystore File
-          </mat-radio-button>
-          <BR/>
-          <mat-radio-button [value]="'private'">
-            Private Key
-          </mat-radio-button>
-        </mat-radio-group>
-      </div>
-    </div>
-    <div class="col-sm" [ngSwitch]="currentWalletProvider">
-      <div *ngSwitchCase="'addressOnly'">
-        <wallet-address-only-selector></wallet-address-only-selector>
-      </div>
-
-      <div *ngSwitchCase="'metamask'">
-        <wallet-metamask-selector></wallet-metamask-selector>
-      </div>
-
-      <div *ngSwitchCase="'ledger'">
-        <wallet-ledger-selector></wallet-ledger-selector>
-      </div>
-
-      <div *ngSwitchCase="'keystore'">
-        <wallet-keystore-selector></wallet-keystore-selector>
-      </div>
-
-      <div *ngSwitchCase="'private'">
-        <wallet-private-key-selector></wallet-private-key-selector>
-      </div>
-
-    </div>
-  </div>
-</div>
--->
-
-<div class="select-account mt-5 mb-5">
+<div class="select-account mt-5">
   <h2> Select your account from Metamask </h2>
+  <BR />
   <p class="small text-center">
-    We highly recommend you to login our platform with using Metamask. <BR />
+    We highly recommend you to login Muzika with using Metamask. <BR />
     It makes your wallet more secure that your wallet key could not be hijacked from hackers.
   </p>
   <select class="form-control mt-3" id="account" name="account" [(ngModel)]="selectedAccount">
@@ -71,4 +11,11 @@
     </option>
   </select>
   <button type="button" class="btn btn-primary mt-3" (click)="login()"> <i class="fas fa-shield-check"></i> Login with Metamask </button>
+</div>
+
+<div class="mt-4 mb-5">
+  <p class="small text-center">
+    Oh, are you first time to visit Muzika? <BR />
+    You can register in <a routerLink="/beta/register"><b>here (click!)</b></a>.
+  </p>
 </div>
